@@ -31,7 +31,11 @@ _INSTALLDIR	= $(INSTALLDIR:/=\)
 !endif
 
 !ifndef MACHINE
+!if "$(CPU)" == ""
 MACHINE		= IX86
+!else
+MACHINE         = $(CPU)
+!endif
 !endif
 
 !ifndef CFG_ENCODING
